[package]
name = "menhera-postfix-policyd"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
serde = { version = "1.0.219", features = ["derive"] }
